# Agentic-AI-Governance

./: .gitignore  ARCHITECTURE_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_OVERVIEW.md  Dockerfile.test  GETTING_STARTED_CHECKLIST.md  GUIDE.md  OPENCLAW_INTEGRATION.md  OPENCLAW_SETUP.md  POLICIES_AND_TESTS_SUMMARY.md  QUICK_REFERENCE.md  README.md  TEST_ENVIRONMENT_SETUP.md  TROUBLESHOOTING_GUIDE.md  docker-compose.yml  measure_latency.py  openclaw_audit_summary.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docker.txt  requirements.txt  test_destructive_execution.py  test_network_exfiltration.py  test_spatial_overreach.py
examples/: README.md  example_ibm_agent.py  example_openai_agent.py  example_openclaw_agent.py  openclaw_integration.py  setup_openclaw.sh  setup_openclaw_auto.sh
examples/examples/: example_ibm_agent.py  example_openai_agent.py
scripts/: quick_start.sh
src/: main.py
src/agentic_ai_governance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/logs/: audit_log.jsonl
src/policies/: README.md  admin_policies.rego  file_operations.rego  network_policies.rego  policy.rego  resource_policies.rego
src/proxy/: __init__.py  opa_client.py  policy_enforcement_proxy.py  validator.py
src/sandbox_manager/: __init__.py  docker_sandbox.py
tests/: conftest.py  fixtures.py  test_docker_sandbox.py  test_fixtures.py  test_integration.py  test_policies.py  test_policy_enforcement_proxy.py  test_validator.py
