[project]
name = "agentic_ai_governance"
version = "1.0.0"
description = "Multi-layered policy enforcement framework for secure agentic AI execution."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Agentic AI Governance", email = "support@example.com" }
]
keywords = ["ai", "governance", "security", "policy", "opa", "sandbox", "enforcement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0,<25.0",
    "mypy>=1.0,<2.0",
    "pylint>=2.16,<4.0",
    "flake8>=6.0,<8.0",
    "isort>=5.12,<6.0",
]
docker = ["docker>=6.0,<8.0"]

[project.urls]
homepage = "https://github.com/Helio3002/Agentic-AI-Governance"
repository = "https://github.com/Helio3002/Agentic-AI-Governance"
documentation = "https://github.com/Helio3002/Agentic-AI-Governance"
"Bug Tracker" = "https://github.com/Helio3002/Agentic-AI-Governance/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 120
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | workspace
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_first_party = ["src", "proxy", "sandbox_manager"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-ra",
]
markers = [
    "unit: Unit tests that don't require external services",
    "integration: Integration tests that require OPA server or other services",
    "slow: Slow running tests",
    "security: Security-focused tests",
    "policies: Policy-specific tests",
    "validation: Input validation tests",
    "filtering: Output filtering tests",
    "end_to_end: End-to-end execution tests",
]

